@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-09T00:49:05Z",
+  "timestamp" : "2022-08-09T16:10:08Z",
   "count_outdated" : 1797,
   "uniques_outdated" : 122,
-  "count" : 1856,
-  "uniques" : 129,
+  "count" : 1866,
+  "uniques" : 130,
   "views" : [
     {
       "timestamp": "2022-07-27T00:00:00Z",
@@ -51,6 +51,13 @@
       "timestamp": "2022-08-08T00:00:00Z",
       "count": 17,
       "count_minmax": [ 17, 17 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-08-09T00:00:00Z",
+      "count": 10,
+      "count_minmax": [ 10, 10 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
