@@ -1,5 +1,5 @@
 {
-  "count": 59,
+  "count": 69,
   "uniques": 2,
   "views": [
     {
@@ -35,6 +35,11 @@
     {
       "timestamp": "2022-08-08T00:00:00Z",
       "count": 17,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-08-09T00:00:00Z",
+      "count": 10,
       "uniques": 1
     }
   ]
